[metadata]
name = koopman
version = 0.0.0
license = MIT
description = The implementation of Koopman models and applications
long_description = file: README.md
author = Guo Yue
author_email = guoyue@u.nus.edu
classifiers=
    Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    tensorflow
    scipy
    numpy

[options.packages.find]
where=src